# windfarm-monitoring

./: CHANGELOG.md  Cargo.audit.ignore  Cargo.toml  LICENSE-APACHE  README.md
.cargo/: config.toml
src/: client.rs  direct_methods.rs  lib.rs  main.rs  metrics_provider.rs  prometheus.rs  twin.rs
systemd/: windfarm-monitoring.service  windfarm-monitoring.timer
