[package]
authors = ["omnect@conplement.de>"]
edition = "2021"
description = "This edge module simulates metrics of a virtual windfarm device."
homepage = "https://www.omnect.io/home"
license = "MIT OR Apache-2.0"
name = "windfarm-monitoring"
readme = "README.md"
repository = "git@github.com:omnect/windfarm-monitoring.git"
version = "0.3.7"

[dependencies]
anyhow = "1.0"
#azure-iot-sdk = { git = "https://github.com/omnect/azure-iot-sdk.git", tag = "0.13.5", features = [
#    "module_client",
#] }
azure-iot-sdk = { git = "https://github.com/omnect/azure-iot-sdk.git", tag = "0.13.5", features = [
    "edge_client",
] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
default-env = "0.1"
env_logger = { version = "0.11", default-features = false }
futures-executor = "0.3"
lazy_static = "1.4"
log = "0.4"
log-panics = { version = "2", features = ["with-backtrace"] }
prometheus = { version = "0.13", features = ["process"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["full"] }
